<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPA_alghamdis1_Calculator</string>
    <string name="official_name">GPA_alghamdis1_Calculator</string>
    <string name="icon_desc">Android GPA Calculator icon image</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="nameLabel">Triclops Productions™</string>
    <string name="Version">Version 0.05</string>
    <string name="calcButtonLabel">Compute GPA</string>
    <string name="gpaLabel">Your GPA is:</string>
    <string name="class1_title">Subject 1:</string>
    <string name="class2_title">Subject 2:</string>
    <string name="class3_title">Subject 3:</string>
    <string name="class4_title">Subject 4:</string>
    <string name="class5_title">Subject 5:</string>

    <string-array name="gradeArray">
        <item>A+</item>
        <item>A</item>
        <item>A-</item>
        <item>B+</item>
        <item>B</item>
        <item>B-</item>
        <item>C+</item>
        <item>C</item>
        <item>C-</item>
        <item>D+</item>
        <item>D</item>
        <item>D-</item>
        <item>F</item>
    </string-array>

    <string name="title_activity_about">About</string>
    <string name="hello_world">Hello world!</string>

</resources>
