<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/class1_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="10dp"
        android:text="@string/class1_title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/class2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/class1_title"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="10dp"
        android:text="@string/class2_title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/class3_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/class2_title"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="10dp"
        android:text="@string/class3_title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/class5_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="229dp"
        android:text="@string/class5_title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/class4_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/class3_title"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="10dp"
        android:text="@string/class4_title"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/class5_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/class1_spinner"
        android:layout_alignTop="@+id/class5_title"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="132dp"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="textCapCharacters" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/class5_title"

        android:layout_alignStart="@+id/editText"
        android:ems="10"
        android:inputType="textCapCharacters" />


    <EditText
        android:id="@+id/editText4"
        android:layout_width="132dp"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/editText"
        android:layout_alignTop="@+id/class4_title2"
        android:ems="10"
        android:inputType="textCapCharacters" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText"

        android:layout_alignTop="@+id/class3_title"
        android:ems="10"
        android:inputType="textCapCharacters" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText"

        android:layout_alignTop="@+id/class2_title"
        android:ems="10"
        android:inputType="textCapCharacters" />

</RelativeLayout>
